--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link
-            href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Teko&display=swap"
             rel="stylesheet"
         />
         <link
@@ -13,7 +13,7 @@
             integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA=="
             crossorigin="anonymous"
         />
-        <title>My shop</title>
+        <title>ShopiHolic</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
